# supply-chain-defense

./: 2026-05-14-npm-install-shouldnt-run-your-code.md  README.md
cross-ecosystem/: attack-types.md  slsa-sigstore.md  socket-dev.md
dotnet-nuget/: Directory.Packages.props  SupplyChainTest.csproj  nuget.config
golang/: GOENV.sh  Makefile  go.mod
java-gradle/: build.gradle.kts  gradle.properties
java-gradle/gradle/: verification-metadata.xml
java-maven/: pom.xml  settings.xml
nodejs-bun/: bunfig.toml  package.json
nodejs-npm/: .npmrc  package.json
nodejs-pnpm-v10/: .npmrc  package.json
nodejs-pnpm-v11/: .npmrc  package.json  pnpm-workspace.yaml
nodejs-yarn/: .yarnrc.yml  package.json
php-composer/: SUPPLY_CHAIN.md  auth.json.example  composer.json
proxies/: README.md  docker-compose.yml
proxies/athens/: config.toml
proxies/bagetter/: appsettings.json
proxies/devpi/: devpi.conf
proxies/nexus/: setup.sh
proxies/reposilite/: configuration.shared.groovy
python-pip/: pip.conf  requirements.in  requirements.txt
python-poetry/: pyproject.toml
python-uv/: pyproject.toml  uv.toml
ruby-bundler/: Gemfile
rust-cargo/: Cargo.toml  deny.toml
rust-cargo/.cargo/: config.toml
rust-cargo/supply-chain/: audits.toml  config.toml
tests/: lib.sh  run-script-tests.sh  test-bun-scripts.sh  test-cargo.sh  test-dotnet.sh  test-escrow.sh  test-go.sh  test-java.sh  test-minimum-age.sh  test-npm-scripts.sh  test-pnpm-v10-scripts.sh  test-pnpm-v11-scripts.sh  test-private-proxy.sh  test-proxy-age.sh  test-uv-scripts.sh  test-yarn-scripts.sh
(+16 files in other folders)
